# SlimeVR-OpenVR-Driver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: c-cpp.yml
driver/slimevr/: driver.vrdrivermanifest
driver/slimevr/resources/: driver.vrresources  slimevr_driver_config.json
driver/slimevr/resources/input/: actions.json  slimevr_controller_bindings.json  slimevr_controller_bindings_legacy.json  slimevr_tracker_profile.json  vrcompositor_bindings_slimevr.json
driver/slimevr/resources/input/tracker/: slimevr_tracker_chest_profile.json  slimevr_tracker_handed_profile.json  slimevr_tracker_left_ankle_profile.json  slimevr_tracker_left_elbow_profile.json  slimevr_tracker_left_foot_profile.json  slimevr_tracker_left_knee_profile.json  slimevr_tracker_left_shoulder_profile.json  slimevr_tracker_left_wrist_profile.json  slimevr_tracker_right_ankle_profile.json  slimevr_tracker_right_elbow_profile.json  slimevr_tracker_right_foot_profile.json  slimevr_tracker_right_knee_profile.json  slimevr_tracker_right_shoulder_profile.json  slimevr_tracker_right_wrist_profile.json  slimevr_tracker_waist_profile.json
driver/slimevr/resources/localization/: localization.json
driver/slimevr/resources/settings/: default.vrsettings  settingsschema.vrsettings
src/: ControllerDevice.cpp  ControllerDevice.hpp  DeviceType.hpp  DriverFactory.cpp  DriverFactory.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  Logger.cpp  Logger.hpp  SlimeVR-OpenVR-Driver.cpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackerRole.cpp  TrackerRole.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp  VRPaths_openvr.cpp  VRPaths_openvr.hpp
src/bridge/: BridgeClient.cpp  BridgeClient.hpp  BridgeTransport.cpp  BridgeTransport.hpp  CircularBuffer.cpp  CircularBuffer.hpp  ProtobufMessages.proto  bridge-unix-sockets.cpp  bridge-windows-pipes.cpp  bridge.hpp  messages.proto  protobuf.proto  unix-sockets.hpp
test/: BridgeServerMock.cpp  BridgeServerMock.hpp  TestBridgeClientMock.cpp  TestCircularBuffer.cpp  TestSleepTimes.cpp
test/common/: TestBridgeClient.cpp  TestBridgeClient.hpp
test/integration/: TestBridgeClientReal.cpp
